[package]
name = "mimir-bridge"
version = "0.1.0"
authors = ["Forrest Marshall <forrest@mimirblockchain.solutions>"]

[dependencies]
mimir-common = { path = "mimir-common" }
mimir-crypto = { path = "mimir-crypto" }
mimir-proto = { path = "mimir-proto" }
mimir-transport = { path = "mimir-transport" }
mimir-worker = { path = "mimir-worker"}

[workspace]
members = [
    "mimir-crypto",
    "mimir-common",
    "mimir-proto",
    "mimir-transport",
    "mimir-worker",
]

