[package]
name = "mimir-crypto"
version = "0.1.0"
authors = ["Forrest Marshall <forrest@mimirblockchain.solutions>"]
license = "GPL-3.0"

[dependencies]
mimir-common = { path = "../mimir-common" }
lazy_static = "1.0.0"
tiny-keccak = "1.4.0"
rand = "0.4.2"


[dependencies.secp256k1]
features = [ "rand" ]
version = "0.9.2"

[dev-dependencies]
docopt = "0.9"
serde = "1.0" # if you're using `derive(Deserialize)`
serde_derive = "1.0" # if you're using `derive(Deserialize)`
toml = "0.4.2"
