[package]
name = "mimir-transport"
version = "0.1.0"
authors = ["Forrest Marshall <forrest@mimirblockchain.solutions>"]

[dependencies]
mimir-common = { path = "../mimir-common" }
mimir-crypto = { path = "../mimir-crypto" }
mimir-proto  = { path = "../mimir-proto"  }
tokio-tungstenite = { git = "https://github.com/forrest-marshall/tokio-tungstenite.git" }
redis-async = "0.1.3"
futures = "0.1.18"
tokio = "0.1.6"
serde_derive = "1.0.27"
serde_json = "1.0.10"
serde = "1.0.27"
url = "1.6.0"
log = "0.4.1"


[dev-dependencies]
env_logger = "0.5.5"

