[package]
name = "mimir-proto"
version = "0.1.0"
authors = ["Forrest Marshall <forrest@mimirblockchain.solutions>"]

[dependencies]
mimir-crypto = { path = "../mimir-crypto" }
mimir-types = { path = "../mimir-types" }
mimir-util = { path = "../mimir-util" }
serde_derive = "1.0.27"
serde = "1.0.27"
log = "0.4.1"

[dev-dependencies]
serde_json = "1.0.10"
rand = "0.4.2"

