[package]
name = "mimir-types"
version = "0.1.0"
authors = ["Forrest Marshall <forrest@mimirblockchain.solutions>"]
license = "GPL-3.0"

[dependencies]
mimir-crypto = { path = "../mimir-crypto" }
mimir-util = { path = "../mimir-util" }
serde_derive = "1.0.27"
serde = "1.0.27"
rand_derive = "0.3.1"
rand = "0.4.2"

[dev-dependencies]
serde_json = "1.0.10"

