[package]
name = "mimir-util"
version = "0.1.0"
authors = ["Forrest Marshall <forrest@mimirblockchain.solutions>"]
license = "GPL-3.0"

[dependencies]
hex-core = { git = "https://github.com/forrest-marshall/hex-core.git" }
serde_derive = "1.0.27"
serde = "1.0.27"
toml = "0.4.5"

[dev-dependencies]
futures = "0.1.18"

