[package]
name = "mimir-node"
version = "0.1.0"
authors = ["Forrest Marshall <forrest@mimirblockchain.solutions>"]

[dependencies]
mimir-crypto = { path = "../../mimir-bridge/mimir-crypto" }
mimir-types = { path = "../../mimir-bridge/mimir-types" }
mimir-util = { path = "../../mimir-bridge/mimir-util" }
tokio-core = "0.1.11"
tokio-timer = "0.1.2"
futures = "0.1.18"
serde_derive = "1.0.27"
serde = "1.0.27"
serde_json = "1.0.10"
web3 = "0.3.0"
rlp = "0.2.1"
log = "0.4.1"


