[package]
name = "mimir-service"
version = "0.1.0"
authors = ["Forrest Marshall <forrest@mimirblockchain.solutions>"]

[dependencies]
mimir-crypto = { path = "../../mimir-bridge/mimir-crypto" }
mimir-types = { path = "../../mimir-bridge/mimir-types" }
mimir-util = { path = "../../mimir-bridge/mimir-util" }
mimir-transport = { path = "../mimir-transport" }
mimir-node = { path = "../mimir-node" }
serde_derive = "1.0.27"
serde = "1.0.27"
structopt = "0.2.5"
tokio-timer = "0.2.3"
tokio-core = "0.1.11"
futures = "0.1.18"
web3 = { git = "https://github.com/forrest-marshall/rust-web3.git" }
url_serde = "0.2.0"
url = "1.7.0"
env_logger = "0.5.5"
log = "0.4.1"

