[package]
name = "mimir-transport"
version = "0.1.0"
authors = ["Forrest Marshall <forrest@mimirblockchain.solutions>"]
license = "GPL-3.0"

[dependencies]
mimir-crypto = { path = "../../mimir-bridge/mimir-crypto" }
mimir-types = { path = "../../mimir-bridge/mimir-types" }
mimir-proto = { path = "../../mimir-bridge/mimir-proto" }
mimir-util = { path = "../../mimir-bridge/mimir-util" }
websocket = "0.20.2"
redis-async = "0.1.3"
futures = "0.1.18"
tokio-core = "0.1.11"
serde_derive = "1.0.27"
serde = "1.0.27"
env_logger = "0.5.5"
log = "0.4.1"

