[package]
name = "mimir-worker"
version = "0.1.0"
authors = ["Forrest Marshall <forrest@mimirblockchain.solutions>"]

[dependencies]
mimir-transport = { path = "../mimir-transport"}
mimir-node = { path = "../mimir-node" }
mimir-crypto = { path = "../../mimir-bridge/mimir-crypto" }
mimir-types = { path = "../../mimir-bridge/mimir-types" }
mimir-proto = { path = "../../mimir-bridge/mimir-proto" }
mimir-util = { path = "../../mimir-bridge/mimir-util" }
structopt = "0.2.5"
tokio-core = "0.1.11"
tokio-timer = "0.1.2"
crossbeam = "0.3.2"
futures = "0.1.18"
futures-cpupool = "0.1.8"
serde_derive = "1.0.27"
serde_json = "1.0.10"
serde = "1.0.27"
web3 = "0.3.0"
rand = "0.4.2"
reqwest = "0.8.5"
url_serde = "0.2.0"
url = "1.7.0"
env_logger = "0.5.5"
log = "0.4.1"


